compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__externals__name_to_escape.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 81
expression: "\n@external(javascript, \"./the/module.mjs\", \"one\")\npub fn class() -> Nil\n"
---
----- SOURCE CODE

@external(javascript, "./the/module.mjs", "one")
pub fn class() -> Nil


----- COMPILED JAVASCRIPT
import { one as class$ } from "./the/module.mjs";

export { class$ };
