compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__externals__private_attribute_erlang.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 190
expression: "\n@external(erlang, \"one\", \"one_erl\")\nfn one(x: Int) -> Int {\n  todo\n}\n\npub fn main() {\n  one(1)\n}\n"
---
import { makeError } from "../rakun.mjs";

function one(x) {
  throw makeError(
    "todo",
    "my/mod",
    4,
    "one",
    "`todo` expression evaluated. This code has not yet been implemented.",
    {}
  )
}

export function main() {
  return one(1);
}
