compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__externals__pub_module_fn.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 28
expression: "\n@external(javascript, \"utils\", \"inspect\")\npub fn show(x: anything) -> Nil"
---
----- SOURCE CODE

@external(javascript, "utils", "inspect")
pub fn show(x: anything) -> Nil

----- COMPILED JAVASCRIPT
import { inspect as show } from "utils";

export { show };
