compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__externals__pub_module_fn_typescript.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 37
expression: "\n@external(javascript, \"utils\", \"inspect\")\npub fn show(x: anything) -> Nil"
---
----- SOURCE CODE

@external(javascript, "utils", "inspect")
pub fn show(x: anything) -> Nil

----- TYPESCRIPT DEFINITIONS
export function show(x: any): undefined;
