compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__externals__same_name_external.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 46
expression: "\n@external(javascript, \"thingy\", \"fetch\")\npub fn fetch(request: Nil) -> Nil"
---
----- SOURCE CODE

@external(javascript, "thingy", "fetch")
pub fn fetch(request: Nil) -> Nil

----- COMPILED JAVASCRIPT
import { fetch } from "thingy";

export { fetch };
