compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__externals__tf_type_name_usage.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 129
expression: "\npub type TESTitem\n\n@external(javascript, \"it\", \"one\")\npub fn one(a: TESTitem) -> TESTitem\n"
---
----- SOURCE CODE

pub type TESTitem

@external(javascript, "it", "one")
pub fn one(a: TESTitem) -> TESTitem


----- TYPESCRIPT DEFINITIONS
export type TESTitem$ = any;

export function one(a: TESTitem$): TESTitem$;
