compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__externals__type_.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 5
expression: pub type Thing
---
----- SOURCE CODE
pub type Thing

----- COMPILED JAVASCRIPT
export {}
